# my-ai-coder

./: README.md
code-play/: .env.example  .gitignore  Makefile  README.md  langgraph.json  main.py
code-play/backend/: main.py  pyproject.toml
code-play/backend/src/agentic/agents/: __init__.py  researcher.py  state_compressor.py
code-play/backend/src/agentic/notepad/: __init__.py  notepad.py
code-play/backend/src/agentic/prompts/: compressor.jinja-md
code-play/backend/src/agentic/todo/: todo_list.py
code-play/backend/src/agentic/tools/: code_rag_tools.py
code-play/backend/src/llm/model/: chat_model.py
code-play/backend/src/llm/prompt/: __init__.py
code-play/backend/src/workspace/code/: code_outline.py
code-play/backend/src/workspace/fs/: file_tree.py  ignore_rules.py  read_file.py
code-play/backend/src/workspace/project/: project.py
code-play/backend/src/workspace/search/: __init__.py  search_in_file.py  search_in_folders.py
code-play/frontend/: .env.example  eslint.config.js  package.json  pnpm-lock.yaml
code-play/frontend/src/: env.js
code-play/frontend/src/app/: layout.tsx  page.tsx
code-play/src/agentic/agents/: state.py
code-play/src/agentic/prompts/: researcher.jinja-md
code-play/src/agentic/todo/: __init__.py
code-play/src/agentic/tools/: __init__.py  react_tools.py
code-play/src/llm/prompt/: prompt_template.py
code-play/src/llm_space/tracing/: __init__.py
code-play/src/workspace/code/: __init__.py
code-play/src/workspace/fs/: __init__.py
rust-cli/: Cargo.toml
rust-cli/src/: api.rs  lib.rs  main.rs
(+6 files in other folders)
