[package]
name = "maco"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] } # 异步运行时
clap = { version = "4", features = ["derive"] } # 命令行参数解析
reqwest = { version = "0.12", features = ["json"] } # 发送 HTTP 请求
serde = { version = "1", features = ["derive"] } # 序列化/反序列化
serde_json = "1.0" # JSON 具体实现
anyhow = "1.0" # 简洁的应用级错误处理
